SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_15.lang
var x = 15 var y = 10;